feat:reference section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href="#Variables" class="nav-link">Variables</a></li>
             <li><a href="#Declaring_variables" class="nav-link">Declaring variables</a></li>
             <li><a href="#Variable_scope" class="nav-link">Variable scope</a></li>
+            <li><a href="#Reference" class="nav-link">Reference</a></li>
 
         </ul>
     </nav>
@@ -94,6 +95,15 @@
             <code>if (true) { let y = 5; } console.log(y); // ReferenceError: y is not
                     defined</code>
         </section>
+        <section class="main-section" id="Reference">
+            <header>Reference</header>
+            <p>
+                <ul>
+                    <li>All the documentation in this page is taken from <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide">MDN</a></li>
+                </ul>
+            </p>
+        </section>
+
     </main>
 
     <script src=" https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js "></script>
